Add rb_no_keywords_accepted to C-API

This can be used by extensions for C functions that want to
implement the equivalent of **nil syntax.

Extract this function from vm_args.c.

Update Enumerator::Product.new and Enumerator.product to
use this function.

Loosen spec to pass with both the previous and new message.

Fixes [Bug #19829]