enumerator.c
@@ -3510,7 +3510,7 @@ enum_product_initialize(int argc, VALUE *argv, VALUE obj)
     rb_scan_args(argc, argv, "*:", &enums, &options);
 
     if (!NIL_P(options) && !RHASH_EMPTY_P(options)) {
-        rb_exc_raise(rb_keyword_error_new("unknown", rb_hash_keys(options)));
+        rb_no_keywords_accepted();
     }
 
     rb_check_frozen(obj);
@@ -3736,7 +3736,7 @@ enumerator_s_product(int argc, VALUE *argv, VALUE klass)
     rb_scan_args(argc, argv, "*:&", &enums, &options, &block);
 
     if (!NIL_P(options) && !RHASH_EMPTY_P(options)) {
-        rb_exc_raise(rb_keyword_error_new("unknown", rb_hash_keys(options)));
+        rb_no_keywords_accepted();
     }
 
     VALUE obj = enum_product_initialize(argc, argv, enum_product_allocate(rb_cEnumProduct));
